cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_307.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/des_enc.c:213: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/des_enc.c:213:9: Write of unused value
211.       if (enc) {
212.           c2l(iv, tout0);
213.           c2l(iv, tout1);
               ^
214.           for (l -= 8; l >= 0; l -= 8) {
215.               c2l(in, tin0);
